src/scanners.c
/* Generated by re2c 0.13.6 */
#include <stdlib.h>
#include "chunk.h"
#include "scanners.h"

int _scan_at(int (*scanner)(const unsigned char *), cmark_chunk *c, int offset)
{
	int res;
	unsigned char *ptr = (unsigned char *)c->data;
	unsigned char lim = ptr[c->len];

	ptr[c->len] = '\0';
	res = scanner(ptr + offset);
	ptr[c->len] = lim;

	return res;
}



// Try to match URI autolink after first <, returning number of chars matched.
int _scan_autolink_uri(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;

{
	unsigned char yych;
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128,   0, 128,   0, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128,   0, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128, 128, 128, 128, 128, 128, 128, 
	};

	yych = *p;
	switch (yych) {
	case '\n':	goto yy2;
	case 'A':
	case 'a':	goto yy6;
	case 'B':
	case 'b':	goto yy24;
	case 'C':
	case 'c':	goto yy3;
	case 'D':
	case 'd':	goto yy4;
	case 'E':
	case 'e':	goto yy25;
	case 'F':
	case 'f':	goto yy7;
	case 'G':
	case 'g':	goto yy8;
	case 'H':
	case 'h':	goto yy9;
	case 'I':
	case 'i':	goto yy10;
	case 'J':
	case 'j':	goto yy5;
	case 'K':
	case 'k':	goto yy26;
	case 'L':
	case 'l':	goto yy11;
	case 'M':
	case 'm':	goto yy12;
	case 'N':
	case 'n':	goto yy13;
	case 'O':
	case 'o':	goto yy14;
	case 'P':
	case 'p':	goto yy15;
	case 'Q':
	case 'q':	goto yy27;
	case 'R':
	case 'r':	goto yy16;
	case 'S':
	case 's':	goto yy17;
	case 'T':
	case 't':	goto yy18;
	case 'U':
	case 'u':	goto yy19;
	case 'V':
	case 'v':	goto yy20;
	case 'W':
	case 'w':	goto yy21;
	case 'X':
	case 'x':	goto yy22;
	case 'Y':
	case 'y':	goto yy28;
	case 'Z':
	case 'z':	goto yy23;
	default:	goto yy29;
	}
yy2:
	{ return 0; }
yy3:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy443;
	case 'H':
	case 'h':	goto yy442;
	case 'I':
	case 'i':	goto yy445;
	case 'O':
	case 'o':	goto yy441;
	case 'R':
	case 'r':	goto yy444;
	case 'V':
	case 'v':	goto yy440;
	default:	goto yy2;
	}
yy4:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy416;
	case 'I':
	case 'i':	goto yy415;
	case 'L':
	case 'l':	goto yy413;
	case 'N':
	case 'n':	goto yy414;
	case 'O':
	case 'o':	goto yy417;
	case 'T':
	case 't':	goto yy412;
	case 'V':
	case 'v':	goto yy411;
	default:	goto yy2;
	}
yy5:
	yych = *(marker = ++p);
	if (yych <= 'M') {
		if (yych == 'A') goto yy403;
		if (yych <= 'L') goto yy2;
		goto yy402;
	} else {
		if (yych <= 'a') {
			if (yych <= '`') goto yy2;
			goto yy403;
		} else {
			if (yych == 'm') goto yy402;
			goto yy2;
		}
	}
yy6:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy384;
	case 'B':
	case 'b':	goto yy383;
	case 'C':
	case 'c':	goto yy382;
	case 'D':
	case 'd':	goto yy381;
	case 'F':
	case 'f':	goto yy380;
	case 'I':
	case 'i':	goto yy379;
	case 'P':
	case 'p':	goto yy378;
	case 'T':
	case 't':	goto yy377;
	case 'W':
	case 'w':	goto yy34;
	default:	goto yy2;
	}
yy7:
	yych = *(marker = ++p);
	if (yych <= 'T') {
		if (yych <= 'E') {
			if (yych == 'A') goto yy364;
			if (yych <= 'D') goto yy2;
			goto yy363;
		} else {
			if (yych == 'I') goto yy362;
			if (yych <= 'S') goto yy2;
			goto yy365;
		}
	} else {
		if (yych <= 'e') {
			if (yych == 'a') goto yy364;
			if (yych <= 'd') goto yy2;
			goto yy363;
		} else {
			if (yych <= 'i') {
				if (yych <= 'h') goto yy2;
				goto yy362;
			} else {
				if (yych == 't') goto yy365;
				goto yy2;
			}
		}
	}
yy8:
	yych = *(marker = ++p);
	switch (yych) {
	case 'E':
	case 'e':	goto yy347;
	case 'G':
	case 'g':	goto yy34;
	case 'I':
	case 'i':	goto yy345;
	case 'O':
	case 'o':	goto yy346;
	case 'T':
	case 't':	goto yy344;
	default:	goto yy2;
	}
yy9:
	yych = *(marker = ++p);
	if (yych <= 'S') {
		if (yych <= '3') {
			if (yych <= '2') goto yy2;
			goto yy340;
		} else {
			if (yych == 'C') goto yy338;
			goto yy2;
		}
	} else {
		if (yych <= 'c') {
			if (yych <= 'T') goto yy339;
			if (yych <= 'b') goto yy2;
			goto yy338;
		} else {
			if (yych == 't') goto yy339;
			goto yy2;
		}
	}
yy10:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy320;
	case 'C':
	case 'c':	goto yy317;
	case 'M':
	case 'm':	goto yy319;
	case 'N':
	case 'n':	goto yy318;
	case 'P':
	case 'p':	goto yy316;
	case 'R':
	case 'r':	goto yy315;
	case 'T':
	case 't':	goto yy314;
	default:	goto yy2;
	}
yy11:
	yych = *(marker = ++p);
	if (yych <= 'D') {
		if (yych == 'A') goto yy308;
		if (yych <= 'C') goto yy2;
		goto yy307;
	} else {
		if (yych <= 'a') {
			if (yych <= '`') goto yy2;
			goto yy308;
		} else {
			if (yych == 'd') goto yy307;
			goto yy2;
		}
	}
yy12:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy274;
	case 'E':
	case 'e':	goto yy273;
	case 'I':
	case 'i':	goto yy276;
	case 'M':
	case 'm':	goto yy272;
	case 'S':
	case 's':	goto yy271;
	case 'T':
	case 't':	goto yy275;
	case 'U':
	case 'u':	goto yy270;
	case 'V':
	case 'v':	goto yy269;
	default:	goto yy2;
	}
yy13:
	yych = *(marker = ++p);
	switch (yych) {
	case 'E':
	case 'e':	goto yy264;
	case 'F':
	case 'f':	goto yy263;
	case 'I':
	case 'i':	goto yy262;
	case 'N':
	case 'n':	goto yy261;
	case 'O':
	case 'o':	goto yy260;
	default:	goto yy2;
	}
yy14:
	yych = *(marker = ++p);
	if (yych <= 'P') {
		if (yych == 'I') goto yy246;
		if (yych <= 'O') goto yy2;
		goto yy247;
	} else {
		if (yych <= 'i') {
			if (yych <= 'h') goto yy2;
			goto yy246;
		} else {
			if (yych == 'p') goto yy247;
			goto yy2;
		}
	}
yy15:
	yych = *(marker = ++p);
	if (yych <= 'S') {
		if (yych <= 'L') {
			if (yych == 'A') goto yy228;
			if (yych <= 'K') goto yy2;
			goto yy227;
		} else {
			if (yych <= 'O') {
				if (yych <= 'N') goto yy2;
				goto yy229;
			} else {
				if (yych <= 'Q') goto yy2;
				if (yych <= 'R') goto yy226;
				goto yy225;
			}
		}
	} else {
		if (yych <= 'n') {
			if (yych <= 'a') {
				if (yych <= '`') goto yy2;
				goto yy228;
			} else {
				if (yych == 'l') goto yy227;
				goto yy2;
			}
		} else {
			if (yych <= 'q') {
				if (yych <= 'o') goto yy229;
				goto yy2;
			} else {
				if (yych <= 'r') goto yy226;
				if (yych <= 's') goto yy225;
				goto yy2;
			}
		}
	}
yy16:
	yych = *(marker = ++p);
	if (yych <= 'T') {
		if (yych <= 'L') {
			if (yych == 'E') goto yy215;
			goto yy2;
		} else {
			if (yych <= 'M') goto yy214;
			if (yych <= 'R') goto yy2;
			if (yych <= 'S') goto yy213;
			goto yy212;
		}
	} else {
		if (yych <= 'm') {
			if (yych == 'e') goto yy215;
			if (yych <= 'l') goto yy2;
			goto yy214;
		} else {
			if (yych <= 'r') goto yy2;
			if (yych <= 's') goto yy213;
			if (yych <= 't') goto yy212;
			goto yy2;
		}
	}
yy17:
	yych = *(marker = ++p);
	switch (yych) {
	case 'E':
	case 'e':	goto yy168;
	case 'F':
	case 'f':	goto yy167;
	case 'G':
	case 'g':	goto yy166;
	case 'H':
	case 'h':	goto yy171;
	case 'I':
	case 'i':	goto yy170;
	case 'K':
	case 'k':	goto yy165;
	case 'M':
	case 'm':	goto yy164;
	case 'N':
	case 'n':	goto yy169;
	case 'O':
	case 'o':	goto yy163;
	case 'P':
	case 'p':	goto yy162;
	case 'S':
	case 's':	goto yy161;
	case 'T':
	case 't':	goto yy160;
	case 'V':
	case 'v':	goto yy159;
	default:	goto yy2;
	}
yy18:
	yych = *(marker = ++p);
	switch (yych) {
	case 'A':
	case 'a':	goto yy135;
	case 'E':
	case 'e':	goto yy131;
	case 'F':
	case 'f':	goto yy134;
	case 'H':
	case 'h':	goto yy130;
	case 'I':
	case 'i':	goto yy132;
	case 'N':
	case 'n':	goto yy133;
	case 'V':
	case 'v':	goto yy34;
	default:	goto yy2;
	}
yy19:
	yych = *(marker = ++p);
	if (yych <= 'T') {
		if (yych <= 'N') {
			if (yych == 'D') goto yy122;
			if (yych <= 'M') goto yy2;
			goto yy121;
		} else {
			if (yych == 'R') goto yy123;
			if (yych <= 'S') goto yy2;
			goto yy120;
		}
	} else {
		if (yych <= 'n') {
			if (yych == 'd') goto yy122;
			if (yych <= 'm') goto yy2;
			goto yy121;
		} else {
			if (yych <= 'r') {
				if (yych <= 'q') goto yy2;
				goto yy123;
			} else {
				if (yych == 't') goto yy120;
				goto yy2;
			}
		}
	}
yy20:
	yych = *(marker = ++p);
	if (yych <= 'I') {
		if (yych == 'E') goto yy104;
		if (yych <= 'H') goto yy2;
		goto yy103;
	} else {
		if (yych <= 'e') {
			if (yych <= 'd') goto yy2;
			goto yy104;
		} else {
			if (yych == 'i') goto yy103;
			goto yy2;
		}
	}
yy21:
	yych = *(marker = ++p);
	if (yych <= 'Y') {
		if (yych <= 'R') {
			if (yych == 'E') goto yy93;
			goto yy2;
		} else {
			if (yych <= 'S') goto yy94;
			if (yych <= 'T') goto yy92;
			if (yych <= 'X') goto yy2;
			goto yy91;
		}
	} else {
		if (yych <= 's') {
			if (yych == 'e') goto yy93;
			if (yych <= 'r') goto yy2;
			goto yy94;
		} else {
			if (yych <= 't') goto yy92;
			if (yych == 'y') goto yy91;
			goto yy2;
		}
	}
yy22:
	yych = *(marker = ++p);
	if (yych <= 'R') {
		if (yych <= 'F') {
			if (yych == 'C') goto yy70;
			if (yych <= 'E') goto yy2;
			goto yy68;
		} else {
			if (yych == 'M') goto yy69;
			if (yych <= 'Q') goto yy2;
			goto yy67;
		}
	} else {
		if (yych <= 'f') {
			if (yych == 'c') goto yy70;
			if (yych <= 'e') goto yy2;
			goto yy68;
		} else {
			if (yych <= 'm') {
				if (yych <= 'l') goto yy2;
				goto yy69;
			} else {
				if (yych == 'r') goto yy67;
				goto yy2;
			}
		}
	}
yy23:
	yych = *(marker = ++p);
	if (yych == '3') goto yy62;
	goto yy2;
yy24:
	yych = *(marker = ++p);
	if (yych <= 'O') {
		if (yych <= 'H') {
			if (yych == 'E') goto yy52;
			goto yy2;
		} else {
			if (yych <= 'I') goto yy51;
			if (yych <= 'N') goto yy2;
			goto yy50;
		}
	} else {
		if (yych <= 'h') {
			if (yych == 'e') goto yy52;
			goto yy2;
		} else {
			if (yych <= 'i') goto yy51;
			if (yych == 'o') goto yy50;
			goto yy2;
		}
	}
yy25:
	yych = *(marker = ++p);
	if (yych == 'D') goto yy48;
	if (yych == 'd') goto yy48;
	goto yy2;
yy26:
	yych = *(marker = ++p);
	if (yych == 'E') goto yy43;
	if (yych == 'e') goto yy43;
	goto yy2;
yy27:
	yych = *(marker = ++p);
	if (yych == 'U') goto yy40;
	if (yych == 'u') goto yy40;
	goto yy2;
yy28:
	yych = *(marker = ++p);
	if (yych == 'M') goto yy30;
	if (yych == 'm') goto yy30;
	goto yy2;
yy29:
	yych = *++p;
	goto yy2;
yy30:
	yych = *++p;
	if (yych == 'S') goto yy32;
	if (yych == 's') goto yy32;
yy31:
	p = marker;
	goto yy2;
yy32:
	yych = *++p;
	if (yych == 'G') goto yy33;
	if (yych != 'g') goto yy31;
yy33:
	yych = *++p;
	if (yych == 'R') goto yy34;
	if (yych != 'r') goto yy31;
yy34:
	yych = *++p;
	if (yych != ':') goto yy31;
yy35:
	++p;
	yych = *p;
	if (yybm[0+yych] & 128) {
		goto yy35;
	}
	if (yych <= '=') goto yy31;
	if (yych <= '>') goto yy38;
	++p;
	yych = *p;
	if (yych <= '@') {
		if (yych <= ' ') goto yy31;
		if (yych <= '/') goto yy35;
		if (yych <= '9') goto yy31;
		goto yy35;
	} else {
		if (yych <= '`') {
			if (yych <= 'Z') goto yy31;
			goto yy35;
		} else {
			if (yych <= 'z') goto yy31;
			if (yych <= '~') goto yy35;
			goto yy31;
		}
	}
yy38:
	++p;
	{ return (p - start); }
yy40:
	yych = *++p;
	if (yych == 'E') goto yy41;
	if (yych != 'e') goto yy31;
yy41:
	yych = *++p;
	if (yych == 'R') goto yy42;
	if (yych != 'r') goto yy31;
yy42:
	yych = *++p;
	if (yych == 'Y') goto yy34;
	if (yych == 'y') goto yy34;
	goto yy31;
yy43:
	yych = *++p;
	if (yych == 'Y') goto yy44;
	if (yych != 'y') goto yy31;
yy44:
	yych = *++p;
	if (yych == 'P') goto yy45;
	if (yych != 'p') goto yy31;
yy45:
	yych = *++p;
	if (yych == 'A') goto yy46;
	if (yych != 'a') goto yy31;
yy46:
	yych = *++p;
	if (yych == 'R') goto yy47;
	if (yych != 'r') goto yy31;
yy47:
	yych = *++p;
	if (yych == 'C') goto yy34;
	if (yych == 'c') goto yy34;
	goto yy31;
yy48:
	yych = *++p;
	if (yych != '2') goto yy31;
	yych = *++p;
	if (yych == 'K') goto yy34;
	if (yych == 'k') goto yy34;
	goto yy31;
yy50:
	yych = *++p;
	if (yych == 'L') goto yy61;
	if (yych == 'l') goto yy61;
	goto yy31;
yy51:
	yych = *++p;
	if (yych == 'T') goto yy57;
	if (yych == 't') goto yy57;
	goto yy31;
yy52:
	yych = *++p;
	if (yych == 'S') goto yy53;
	if (yych != 's') goto yy31;
yy53:
	yych = *++p;
	if (yych == 'H') goto yy54;
	if (yych != 'h') goto yy31;
yy54:
	yych = *++p;
	if (yych == 'A') goto yy55;
	if (yych != 'a') goto yy31;
yy55:
	yych = *++p;
	if (yych == 'R') goto yy56;
	if (yych != 'r') goto yy31;
yy56:
	yych = *++p;
	if (yych == 'E') goto yy34;
	if (yych == 'e') goto yy34;
	goto yy31;
yy57:
	yych = *++p;
	if (yych == 'C') goto yy58;
	if (yych != 'c') goto yy31;
yy58:
	yych = *++p;
	if (yych == 'O') goto yy59;
	if (yych != 'o') goto yy31;
yy59:
	yych = *++p;
	if (yych == 'I') goto yy60;
	if (yych != 'i') goto yy31;
yy60:
	yych = *++p;
	if (yych == 'N') goto yy34;
	if (yych == 'n') goto yy34;
	goto yy31;
yy61:
	yych = *++p;
	if (yych == 'O') goto yy34;
	if (yych == 'o') goto yy34;
	goto yy31;
yy62:
	yych = *++p;
	if (yych != '9') goto yy31;
	yych = *++p;
	if (yych != '.') goto yy31;
	yych = *++p;
	if (yych != '5') goto yy31;
	yych = *++p;
	if (yych != '0') goto yy31;
	yych = *++p;
	if (yych <= 'Q') goto yy31;
	if (yych <= 'S') goto yy34;
	if (yych <= 'q') goto yy31;
	if (yych <= 's') goto yy34;
	goto yy31;
yy67:
	yych = *++p;
	if (yych == 'I') goto yy34;
	if (yych == 'i') goto yy34;
	goto yy31;
yy68:
	yych = *++p;
	if (yych == 'I') goto yy89;
	if (yych == 'i') goto yy89;
	goto yy31;
yy69:
	yych = *++p;
	if (yych <= 'P') {
		if (yych == 'L') goto yy79;
		if (yych <= 'O') goto yy31;
		goto yy80;
	} else {
		if (yych <= 'l') {
			if (yych <= 'k') goto yy31;
			goto yy79;
		} else {
			if (yych == 'p') goto yy80;
			goto yy31;
		}
	}
yy70:
	yych = *++p;
	if (yych == 'O') goto yy71;
	if (yych != 'o') goto yy31;
yy71:
	yych = *++p;
	if (yych == 'N') goto yy72;
	if (yych != 'n') goto yy31;
yy72:
	yych = *++p;
	if (yych == '-') goto yy73;
	if (yych == ':') goto yy35;
	goto yy31;
yy73:
	yych = *++p;
	if (yych == 'U') goto yy74;
	if (yych != 'u') goto yy31;
yy74:
	yych = *++p;
	if (yych == 'S') goto yy75;
	if (yych != 's') goto yy31;
yy75:
	yych = *++p;
	if (yych == 'E') goto yy76;
	if (yych != 'e') goto yy31;
yy76:
	yych = *++p;
	if (yych == 'R') goto yy77;
	if (yych != 'r') goto yy31;
yy77:
	yych = *++p;
	if (yych == 'I') goto yy78;
	if (yych != 'i') goto yy31;
yy78:
	yych = *++p;
	if (yych == 'D') goto yy34;
	if (yych == 'd') goto yy34;
	goto yy31;
yy79:
	yych = *++p;
	if (yych == 'R') goto yy81;
	if (yych == 'r') goto yy81;
	goto yy31;
yy80:
	yych = *++p;
	if (yych == 'P') goto yy34;
	if (yych == 'p') goto yy34;
	goto yy31;
yy81:
	yych = *++p;
	if (yych == 'P') goto yy82;
	if (yych != 'p') goto yy31;
yy82:
	yych = *++p;
	if (yych == 'C') goto yy83;
	if (yych != 'c') goto yy31;
yy83:
	yych = *++p;
	if (yych != '.') goto yy31;
	yych = *++p;
	if (yych == 'B') goto yy85;
	if (yych != 'b') goto yy31;
yy85:
	yych = *++p;
	if (yych == 'E') goto yy86;
	if (yych != 'e') goto yy31;
yy86:
	yych = *++p;
	if (yych == 'E') goto yy87;
	if (yych != 'e') goto yy31;
yy87:
	yych = *++p;
	if (yych == 'P') goto yy88;
	if (yych != 'p') goto yy31;
yy88:
	yych = *++p;
	if (yych <= 'R') {
		if (yych == ':') goto yy35;
		goto yy31;
	} else {
		if (yych <= 'S') goto yy34;
		if (yych == 's') goto yy34;
		goto yy31;
	}
yy89:
	yych = *++p;
	if (yych == 'R') goto yy90;
	if (yych != 'r') goto yy31;
yy90:
	yych = *++p;
	if (yych == 'E') goto yy34;
	if (yych == 'e') goto yy34;
	goto yy31;
yy91:
	yych = *++p;
	if (yych == 'C') goto yy99;
	if (yych == 'c') goto yy99;
	goto yy31;
yy92:
	yych = *++p;
	if (yych == 'A') goto yy98;
	if (yych == 'a') goto yy98;
	goto yy31;
yy93:
	yych = *++p;
	if (yych == 'B') goto yy95;
	if (yych == 'b') goto yy95;
	goto yy31;
yy94:
	yych = *++p;
	if (yych <= 'R') {
		if (yych == ':') goto yy35;
		goto yy31;
	} else {
		if (yych <= 'S') goto yy34;
		if (yych == 's') goto yy34;
		goto yy31;
	}
yy95:
	yych = *++p;
	if (yych == 'C') goto yy96;
	if (yych != 'c') goto yy31;
yy96:
	yych = *++p;
	if (yych == 'A') goto yy97;
	if (yych != 'a') goto yy31;
yy97:
	yych = *++p;
	if (yych == 'L') goto yy34;
	if (yych == 'l') goto yy34;
	goto yy31;
yy98:
	yych = *++p;
	if (yych == 'I') goto yy34;
	if (yych == 'i') goto yy34;
	goto yy31;
yy99:
	yych = *++p;
	if (yych == 'I') goto yy100;
	if (yych != 'i') goto yy31;
yy100:
	yych = *++p;
	if (yych == 'W') goto yy101;
	if (yych != 'w') goto yy31;
yy101:
	yych = *++p;
	if (yych == 'Y') goto yy102;
	if (yych != 'y') goto yy31;
yy102:
	yych = *++p;
	if (yych == 'G') goto yy34;
	if (yych == 'g') goto yy34;
	goto yy31;
yy103:
	yych = *++p;
	if (yych == 'E') goto yy112;
	if (yych == 'e') goto yy112;
	goto yy31;
yy104:
	yych = *++p;
	if (yych <= 'N') {
		if (yych <= 'L') goto yy31;
		if (yych >= 'N') goto yy106;
	} else {
		if (yych <= 'l') goto yy31;
